# macross-can

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  project.ps1
.github/workflows/: build.yml  ci.yml  format.yml  lint.yml
cmake/: arm-none-eabi-gcc.cmake
src/: CMakeLists.txt  main.c
